tests/cases/positive/dependent/vec-bool.frtl
zs : Vec(3,Bool) = [true, false, true]