tests/cases/negative/dependent/vec-nat-wrong-size.frtl
xs : Vec(3,Nat) = [1,2]
it = xs
